@@ -189,7 +189,8 @@ double 	gaussienne(double sigma, int size, double *gauss);
 int 	unsharp(fits *,double sigma, double mult, gboolean verbose);
 int 	shift(int sx, int sy);
 double entropy(fits *fit, int layer, rectangle *area, imstats *opt_stats);
-int 	loglut(fits *fit, int dir);
+int 	loglut(fits *fit);
+int asinhlut(fits *fit, double beta, double offset, gboolean RGBspace);
 int	ddp(fits *a, int lev, float coef, float sig);
 int	visu(fits *fit, int low, int high);
 int	fill(fits *fit, int level, rectangle *arearg);
