@@ -6,7 +6,8 @@ xxxxxxxx
 * Fixed crash on sequence export with normalization
 * Scripts with Windows end of line (CR+LF) are now usable
 * Added RGB flat normalisation for CFA images and command GREY_FLAT
-* Added command SETFINDSTAR to define sigma and roundness parameters
+* Added SETFINDSTAR command to define sigma and roundness parameters
+* Added ASINH command and GUI function
 * Make command SEQCROP scriptable
 * New astrometric tool
 * Improved global registration and fixed a bug
